<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ro.c-s.tao</groupId>
        <artifactId>tao-core</artifactId>
        <version>1.4.3</version>
    </parent>

    <artifactId>tao-services</artifactId>
    <packaging>pom</packaging>

    <name>TAO Services Project</name>
    <description>Spring services for TAO</description>

    <modules>
        <module>tao-services-base</module>
        <module>tao-services-commons</module>
        <module>tao-data-services</module>
        <module>tao-auth-service</module>
        <module>tao-user-service</module>
        <module>tao-admin-service</module>
        <module>tao-data-query-service</module>
        <module>tao-monitoring-service</module>
        <module>tao-progress-report-service</module>
        <module>tao-orchestration-services</module>
        <module>tao-web-processing-service</module>
        <module>tao-workflow-library</module>
        <module>tao-scheduling-service</module>
		<module>tao-services-startup</module>
        <module>tao-workspace-service</module>
        <module>tao-viewer-service</module>
        <module>tao-services-kit</module>
    </modules>

    <properties>
        <spring.boot.version>2.7.11</spring.boot.version>
        <taoReleasesUrl>${project.deploy.root.path}/tao-services</taoReleasesUrl>
    </properties>

    <repositories>
        <repository>
            <id>Nexus</id>
            <url>https://nexus.senbox.net/nexus/content/repositories/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- TAO domain model -->
        <dependency>
            <groupId>ro.c-s.tao</groupId>
            <artifactId>tao-data-model</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Spring dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.boot.version}</version>
            <exclusions>
                <!-- Exclude the Tomcat dependency -->
                <!--<exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>-->
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-core</artifactId>
            <version>2.7.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-hibernate5</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.9.13</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.4.0-b180830.0359</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>2.3.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <directory>${project.basedir}/target</directory>
        <outputDirectory>${project.build.directory}/classes</outputDirectory>
        <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>11</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.github.therapi</groupId>
                                <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                                <version>0.15.0</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <Bundle-Name>TAO Services</Bundle-Name>
                                <Version>${project.version}</Version>
                                <Build-Time>${maven.build.timestamp}</Build-Time>
                                <Main-Class>ro.cs.tao.services.TaoServicesStartup</Main-Class>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>copy-libs</id>
                            <phase>deploy</phase>
                            <goals>
                                <goal>copy-dependencies</goal>
                            </goals>
                            <configuration>
                                <includeScope>runtime</includeScope>
                                <excludeGroupIds>ro.cs.tao</excludeGroupIds>
                                <overWriteReleases>false</overWriteReleases>
                                <overWriteSnapshots>true</overWriteSnapshots>
                                <outputDirectory>../tao-services-kit/target/tao-services-${project.version}/tao/lib</outputDirectory>
                                <excludeArtifactIds>commons-lang:commons-lang:jar:2.4,org.apache.httpcomponents:httpclient:jar:4.5.13,org.apache.httpcomponents:httpcore:jar:4.4.13,com.fasterxml.jackson.core:jackson-core:jar:2.13.2,com.fasterxml.jackson.core:jackson-databind:jar:2.14.1,com.fasterxml.jackson.core:jackson-databind:jar:2.14.1,com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:jar:2.14.0,com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:jar:2.12.3,com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:jar:2.12.3,com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:jar:2.12.3,com.fasterxml.jackson.module:jackson-module-jaxb-annotations:jar:2.12.3,jakarta.activation:jakarta.activation-api:jar:1.2.1,jakarta.annotation:jakarta.annotation-api:jar:1.3.4,jakarta.xml.bind:jakarta.xml.bind-api:jar:2.3.2,javax.activation:javax.activation-api:jar:1.2.0,com.vividsolutions:jts-core:jar:1.14.0,com.sun.istack:istack-commons-runtime:jar:3.0.7,org.glassfish.jaxb:jaxb-runtime:jar:2.3.1,org.reactivestreams:reactive-streams:jar:1.0.0,org.glassfish.jaxb:txw2:jar:2.3.1,org.jboss.logging:jboss-logging:jar:3.4.1.Final,com.googlecode.json-simple:json-simple:jar:1.1,com.google.code.findbugs:jsr305:jar:2.0.0,org.locationtech.jts:jts-core:jar:1.18.2,com.mchange:mchange-commons-java:jar:0.2.11,javax.servlet:servlet-api:jar:2.4,org.slf4j:slf4j-api:jar:1.7.7,org.slf4j:slf4j-api:jar:1.7.2*,org.yaml:snakeyaml:jar:1.30</excludeArtifactIds>
                                <overWriteIfNewer>true</overWriteIfNewer>
                            </configuration>
                        </execution>
                        <execution>
                            <id>copy-artifacts</id>
                            <phase>deploy</phase>
                            <goals>
                                <goal>copy</goal>
                            </goals>
                            <configuration>
                                <artifactItems>
                                    <artifactItem>
                                        <groupId>${project.groupId}</groupId>
                                        <artifactId>${project.artifactId}</artifactId>
                                        <version>${project.version}</version>
                                    </artifactItem>
                                </artifactItems>
                                <overWriteReleases>true</overWriteReleases>
                                <overWriteSnapshots>true</overWriteSnapshots>
                                <outputDirectory>../tao-services-kit/target/tao-services-${project.version}/tao/services</outputDirectory>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>